[package]
name = "blocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
lazy-regex = "2.4.1"
